fix banner and text overlap

--- a/src/components/courseTuitionCard/index.module.scss
+++ b/src/components/courseTuitionCard/index.module.scss
@@ -53,6 +53,9 @@
     padding: 0.5rem 1.5rem;
     text-transform: uppercase;
     font-weight: 500;
+    @media (min-width:  992px) and (max-width: 1200px) {
+      font-size: 0.75rem;
+    }
   }
 
   .textLink {
